--- a/index.html
+++ b/index.html
@@ -22,5 +22,29 @@
   <img src="images/3.JPG" style="width:100%;">
   <img src="images/4.JPG" style="width:100%;">
 
+ /* Style the navbar */
+#navbar {
+  position: sticky;
+  top: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Navbar links */
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+/* Page content */
+.content {
+  padding: 16px;
+} 
+
+   
 </body>
 </html>
