--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<nav>
+  <input type="checkbox" id="check">
+  <label for="check" class="checkbtn">
+    <i class="fas fa-bars"></i>
+  </label>
+  <div class="nav-mobile">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <!-- Add more menu items here -->
+  </div>
+</nav>
       </div>
 </head>
 <body>
