--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <a href="#">About</a>
     <!-- Add more menu items here -->
   </div>
+  nav {
+ padding: 1.5rem 2rem;
+ background-color: #222831;
+ color: #fff;
+}
 </nav>
       </div>
 </head>
