--- a/index.html
+++ b/index.html
@@ -3,7 +3,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hamburger-menu</title>
+  </head>
 
+  <body>
+    <section class="nav">
+      <!-- We can also insert any logo here     -->
+      <div class="logo">Hamburger Menu</div>
+
+      <!--  checkbox to control the icon's state    -->
+      <input id="menu-toggle" type="checkbox" />
+      <label class="menu-button-container" for="menu-toggle">
+        <div class="menu-button"></div>
+      </label>
+      <!--  main menu    -->
+      <ul class="menu">
+        <li>Home</li>
+        <li>Topics</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </section>
+
+    <h2>Resize the browser window to collapse menu</h2>
+  </body>
       </head>
 <body>
 
