--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
      <div class="row">
   <div class="column">
-    <img src="1.jpg" alt="Snow" style="width:50%">
+    <img src="images/1.jpg" alt="Snow" style="width:50%">
   </div>
   <div class="column">
-    <img src="2.jpg" alt="Forest" style="width:50%">
+    <img src="images2.jpg" alt="Forest" style="width:50%">
  
   </div>
 </div> 
