--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="images/1.jpg" alt="Snow" style="width:50%">
   </div>
   <div class="column">
-    <img src="images2.jpg" alt="Forest" style="width:50%">
+    <img src="images/2.jpg" alt="Forest" style="width:50%">
  
   </div>
 </div> 
