--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <img src="images/1.jpg" alt="Snow" style="width:100%">
   </div>
   <div class="column">
-    <img src="images/2.jpg" alt="Forest" style="width:100%">
+    <img src="2.jpg" alt="Forest" style="width:100%">
   </div>
   <div class="column">
     <img src="images/3.jpg" alt="Mountains" style="width:100%">
