--- a/index.html
+++ b/index.html
@@ -1,41 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-* {
-  box-sizing: border-box;
-}
-
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
-}
-
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-</style>
+<h1>fstop_ginger</h1>
 </head>
 <body>
-
-<h2>Images Side by Side</h2>
-<p>How to create side-by-side images with the CSS float property:</p>
-
-<div class="row">
-  <div class="column">
-    <img src="images/1.jpg" alt="Snow" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="2.jpg" alt="Forest" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="images/3.jpg" alt="Mountains" style="width:100%">
-  </div>
-</div>
 
 </body>
 </html>
