--- a/index.html
+++ b/index.html
@@ -1,80 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Photo Gallery with Menu, Click Tracker, and Hover Info</title>
-    <meta name="keywords" content="Kingsport, Tennessee, Instagram, fstop_ginger, local bands, live music, freelance photography">
-    <meta name="description" content="Discover live music, local bands, and freelance photography in Kingsport, Tennessee. Follow @fstop_ginger on Instagram for more.">
-    <style>
-        body { font-family: Arial, sans-serif; }
-        .menu { position: fixed; top: 0; width: 100%; background: #333; padding: 10px 0; color: white; text-align: center; z-index: 1000; }
-        .menu a { color: white; text-decoration: none; padding: 10px 20px; display: inline-block; }
-        .menu button { background: #444; color: white; padding: 10px 20px; border: none; cursor: pointer; }
-        .gallery { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 10px; padding-top: 60px; }
-        .gallery img { width: 100%; position: relative; }
-        .gallery img:hover::after {
-            content: attr(data-info);
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 5px;
-            font-size: 12px;
-        }
-        .gallery img::after {
-            content: "© fstop_ginger";
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            background: rgba(0, 0, 0, 0.5);
-            color: white;
-            padding: 2px 5px;
-            font-size: 12px;
-            pointer-events: none;
-        }
-
-        @media (max-width: 600px) {
-            .gallery { grid-template-columns: 1fr; }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 10px;
+    }
+    .gallery-item {
+      position: relative;
+      overflow: hidden;
+    }
+    .gallery-item img {
+      width: 100%;
+      transition: transform 0.5s ease;
+    }
+    .gallery-item:hover img {
+      transform: scale(1.1);
+    }
+    .caption {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      color: white;
+      text-align: center;
+      padding: 10px;
+      transition: background 0.5s ease;
+    }
+    .gallery-item:hover .caption {
+      background: rgba(0, 0, 0, 0.8);
+    }
+  </style>
 </head>
 <body>
-    <div class="menu">
-        <a href="https://www.instagram.com/fstop_ginger/" target="_blank">@fstop_ginger on Instagram</a>
-        <button onclick="filterPhotos('all')">All</button>
-        <button onclick="filterPhotos('nature')">Nature</button>
-        <button onclick="filterPhotos('architecture')">Architecture</button>
-        <button onclick="filterPhotos('people')">People</button>
+  <div class="gallery">
+    <div class="gallery-item">
+      <img src="your-image1.jpg" alt="Art 1">
+      <div class="caption">Art 1 Description</div>
     </div>
-    <h1>My Responsive Photo Gallery</h1>
-    <div class="gallery" id="gallery">
-        <img src="nature1.jpg" alt="Nature" class="nature" data-info="Date: 2024-01-01, Venue: Park, Band: The Natures" onclick="trackClick(this)">
-        <img src="nature2.jpg" alt="Nature" class="nature" data-info="Date: 2024-02-01, Venue: Beach, Band: The Sandmen" onclick="trackClick(this)">
-        <img src="architecture1.jpg" alt="Architecture" class="architecture" data-info="Date: 2024-03-01, Venue: City Center, Band: The Skyliners" onclick="trackClick(this)">
-        <img src="people1.jpg" alt="People" class="people" data-info="Date: 2024-04-01, Venue: Club, Band: The Groovers" onclick="trackClick(this)">
-        <img src="people2.jpg" alt="People" class="people" data-info="Date: 2024-05-01, Venue: Concert Hall, Band: The Harmonics" onclick="trackClick(this)">
-        <!-- Add more photos as needed -->
+    <div class="gallery-item">
+      <img src="your-image2.jpg" alt="Art 2">
+      <div class="caption">Art 2 Description</div>
     </div>
-    <script>
-        function filterPhotos(category) {
-            var photos = document.getElementsByClassName('gallery')[0].getElementsByTagName('img');
-            for (var i = 0; i < photos.length; i++) {
-                if (category === 'all' || photos[i].classList.contains(category)) {
-                    photos[i].style.display = '';
-                } else {
-                    photos[i].style.display = 'none';
-                }
-            }
-        }
-
-        function trackClick(image) {
-            var clicks = localStorage.getItem(image.src) || 0;
-            clicks++;
-            localStorage.setItem(image.src, clicks);
-        }
-    </script>
+    <!-- Add more gallery items here -->
+  </div>
 </body>
 </html>
 
