--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
   <div class="gallery">
     <div class="gallery-item">
-      <img src="images/1.jpg" alt="Art 1">
+      <img src="1.jpg" alt="Art 1">
       <div class="caption">Art 1 Description</div>
     </div>
     <div class="gallery-item">
