--- a/index.html
+++ b/index.html
@@ -4,47 +4,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-template-columns: repeat(3, 1fr);
       gap: 10px;
+      padding: 10px;
     }
     .gallery-item {
       position: relative;
       overflow: hidden;
+      aspect-ratio: 3/2;
     }
     .gallery-item img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
       transition: transform 0.5s ease;
     }
     .gallery-item:hover img {
       transform: scale(1.1);
     }
-    .caption {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      color: white;
-      text-align: center;
-      padding: 10px;
-      transition: background 0.5s ease;
+    @media (max-width: 800px) {
+      .gallery {
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
-    .gallery-item:hover .caption {
-      background: rgba(0, 0, 0, 0.8);
+    @media (max-width: 500px) {
+      .gallery {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
 <body>
   <div class="gallery">
     <div class="gallery-item">
-      <img src="1.jpg" alt="Art 1">
-      <div class="caption">Art 1 Description</div>
+      <img src="your-image1.jpg" alt="Art 1">
     </div>
     <div class="gallery-item">
       <img src="your-image2.jpg" alt="Art 2">
-      <div class="caption">Art 2 Description</div>
+    </div>
+    <div class="gallery-item">
+      <img src="your-image3.jpg" alt="Art 3">
     </div>
     <!-- Add more gallery items here -->
   </div>
