--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 <body>
   <div class="gallery">
     <div class="gallery-item">
-      <img src="your-image1.jpg" alt="Art 1">
+      <img src="images/1.jpg" alt="Art 1">
     </div>
     <div class="gallery-item">
-      <img src="your-image2.jpg" alt="Art 2">
+      <img src="images/2.jpg" alt="Art 2">
     </div>
     <div class="gallery-item">
-      <img src="your-image3.jpg" alt="Art 3">
+      <img src="images/3.jpg" alt="Art 3">
     </div>
     <!-- Add more gallery items here -->
   </div>
