--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     .gallery-item:hover img {
       transform: scale(1.1);
     }
-    @media (max-width: 800px) {
+    @media (max-width: 100%) {
       .gallery {
         grid-template-columns: repeat(2, 1fr);
       }
     }
-    @media (max-width: 500px) {
+    @media (max-width: 100%) {
       .gallery {
         grid-template-columns: 1fr;
       }
