--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <img src="images/1.jpg" alt="Art 11">
     </div>
     <div class="gallery-item">
-      <img src="images/2.jpg" alt="Art 2">
+      <img src="2.jpg" alt="Art 2">
     </div>
     <div class="gallery-item">
       <img src="images/3.jpg" alt="Art 3">
