--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <div class="gallery">
     <div class="gallery-item">
-      <img src="images/1.jpg" alt="Art 11">
+      <img src="/images/1.jpg" alt="Art 11">
     </div>
     <div class="gallery-item">
       <img src="2.jpg" alt="Art 2">
