--- a/index.html
+++ b/index.html
@@ -8,50 +8,54 @@
       margin: 0;
       font-family: Arial, sans-serif;
     }
+    .menu {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: #333;
+      color: white;
+      padding: 10px;
+      text-align: center;
+      z-index: 1000;
+    }
+    .content {
+      padding-top: 60px; /* Ensure the content doesn't overlap with the fixed menu */
+    }
     .gallery {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
+      display: flex;
+      overflow-x: auto;
+      white-space: nowrap;
       padding: 10px;
     }
     .gallery-item {
-      position: relative;
-      overflow: hidden;
+      display: inline-block;
+      margin-right: 10px;
     }
     .gallery-item img {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-      transition: transform 0.5s ease;
-    }
-    .gallery-item:hover img {
-      transform: scale(1.1);
-    }
-    @media (max-width: 100%) {
-      .gallery {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-    @media (max-width: 100%) {
-      .gallery {
-        grid-template-columns: 1fr;
-      }
+      height: auto;
+      display: block;
     }
   </style>
 </head>
 <body>
-  <div class="gallery">
-    <div class="gallery-item">
-      <img src="/images/1.jpg" alt="Art 11">
+  <div class="menu">
+    <!-- Add your menu items here -->
+    Home | Gallery | About | Contact
+  </div>
+  <div class="content">
+    <div class="gallery">
+      <div class="gallery-item">
+        <img src="your-image1.jpg" alt="Art 1">
+      </div>
+      <div class="gallery-item">
+        <img src="your-image2.jpg" alt="Art 2">
+      </div>
+      <div class="gallery-item">
+        <img src="your-image3.jpg" alt="Art 3">
+      </div>
+      <!-- Add more gallery items here -->
     </div>
-    <div class="gallery-item">
-      <img src="2.jpg" alt="Art 2">
-    </div>
-    <div class="gallery-item">
-      <img src="images/3.jpg" alt="Art 3">
-    </div>
-    <!-- Add more gallery items here -->
   </div>
 </body>
 </html>
-
