--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
   <div class="content">
     <div class="gallery">
       <div class="gallery-item">
-        <img src="your-image1.jpg" alt="Art 1">
+        <img src="1.jpg" alt="Art 1">
       </div>
       <div class="gallery-item">
-        <img src="your-image2.jpg" alt="Art 2">
+        <img src="images/2.jpg" alt="Art 2">
       </div>
       <div class="gallery-item">
         <img src="your-image3.jpg" alt="Art 3">
