--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="content">
     <div class="gallery">
       <div class="gallery-item">
-        <img src="images/1.jpg" alt="Art 1">
+        <img src="images/1.jpg">
       </div>
       
       
