--- a/index.html
+++ b/index.html
@@ -8,50 +8,38 @@
       margin: 0;
       font-family: Arial, sans-serif;
     }
-    .menu {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: #333;
-      color: white;
-      padding: 10px;
-      text-align: center;
-      z-index: 1000;
-    }
-    .content {
-      padding-top: 60px; /* Ensure the content doesn't overlap with the fixed menu */
-    }
     .gallery {
-      display: flex;
-      overflow-x: auto;
-      white-space: nowrap;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
       padding: 10px;
     }
     .gallery-item {
-      display: inline-block;
-      margin-right: 10px;
+      overflow: hidden;
+      aspect-ratio: 3/2;
     }
     .gallery-item img {
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: cover;
       display: block;
+    }
+    @media (max-width: 800px) {
+      .gallery {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="menu">
-    <!-- Add your menu items here -->
-    Home | Gallery | About | Contact
-  </div>
-  <div class="content">
-    <div class="gallery">
-      <div class="gallery-item">
-        <img src="images/1.jpg">
-      </div>
-      
-      
-      <!-- Add more gallery items here -->
+  <div class="gallery">
+    <div class="gallery-item">
+      <img src="images/1.jpg" alt="Art 1">
     </div>
+    <div class="gallery-item">
+      <img src="images/2.jpg" alt="Art 2">
+    </div>
+    <!-- Add more gallery items here -->
   </div>
 </body>
 </html>
