--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <div class="gallery">
     <div class="gallery-item">
-      <img src="1.jpg" alt="Art 1">
+      <img src="images/1.jpg" alt="Art 1">
     </div>
     <div class="gallery-item">
       <img src="images/2.jpg" alt="Art 2">
