--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <body>
   <div class="gallery">
     <div class="gallery-item">
-      <img src="images/1.Jpg" alt="Art 1">
+      <img src="images/1.JPG" alt="Art 1">
     </div>
     <div class="gallery-item">
-      <img src="images/2.Jpg" alt="Art 2">
+      <img src="images/2.JPG" alt="Art 2">
     </div>
     <!-- Add more gallery items here -->
   </div>
