--- a/index.html
+++ b/index.html
@@ -18,55 +18,70 @@
       text-align: center;
       z-index: 1000;
     }
-    .content {
-      padding-top: 60px; /* Ensure the content doesn't overlap with the fixed menu */
+    .menu ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
     }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-      padding: 10px;
+    .menu li {
+      display: inline-block;
+      position: relative;
     }
-    .gallery-item {
-      overflow: hidden;
-      aspect-ratio: 3/2;
+    .menu a {
+      color: white;
+      padding: 10px 15px;
+      display: block;
+      text-decoration: none;
     }
-    .gallery-item img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+    .menu a:hover {
+      background: #444;
+    }
+    .dropdown {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background: #333;
+      display: none;
+      transition: opacity 0.3s ease;
+      z-index: 1000;
+    }
+    .dropdown li {
       display: block;
     }
-    @media (max-width: 800px) {
-      .gallery {
-        grid-template-columns: repeat(2, 1fr);
-      }
+    .menu li:hover > .dropdown {
+      display: block;
+      opacity: 1;
     }
-    @media (max-width: 500px) {
-      .gallery {
-        grid-template-columns: 1fr;
-      }
+    .menu .scrollable {
+      max-height: 200px;
+      overflow-y: auto;
+    }
+    .dropdown ul {
+      padding-left: 20px;
     }
   </style>
 </head>
 <body>
   <div class="menu">
-    <!-- Add your menu items here -->
-    Home | Gallery | About | Contact
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Gallery</a>
+        <ul class="dropdown">
+          <li><a href="#">From The Edge</a></li>
+          <li><a href="#">Rare Fiction</a></li>
+          <li><a href="#">Symphony of the Mountains</a></li>
+          <li><a href="#">Jeff Lane</a></li>
+          <li><a href="#">Asylum Suite</a></li>
+          <li><a href="#">Hannah Unsalted</a></li>
+          <li><a href="#">Jason Lloyd</a></li>
+        </ul>
+      </li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
   </div>
-  <div class="content">
-    <div class="gallery">
-      <div class="gallery-item">
-        <img src="images/1.JPG" alt="Art 1">
-      </div>
-      <div class="gallery-item">
-        <img src="images/2.JPG" alt="Art 2">
-      </div>
-      <div class="gallery-item">
-        <img src="images/3.JPG" alt="Art 3">
-      </div>
-      <!-- Add more gallery items here -->
-    </div>
+  <div class="content" style="padding-top: 60px;">
+    <!-- Your gallery content here -->
   </div>
 </body>
 </html>
