--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">Gallery</a>
         <ul class="dropdown">
-          <li><a href="From The Edge/from-the-edge.html">From The Edge</a></li>
+          <li><a href="from-the-edge.html">From The Edge</a></li>
           <li><a href="rare-fiction.html">Rare Fiction</a></li>
           <li><a href="symphony-of-the-mountains.html">Symphony of the Mountains</a></li>
           <li><a href="jeff-lane.html">Jeff Lane</a></li>
