--- a/fromtheedge.html
+++ b/fromtheedge.html
@@ -40,13 +40,13 @@
 <body>
   <div class="gallery">
     <div class="gallery-item">
-      <img src="images/1.JPG" alt="Art 1">
+      <img src="fromtheedge/images/1.JPG" alt="Art 1">
     </div>
     <div class="gallery-item">
-      <img src="images/2.JPG" alt="Art 2">
+      <img src="fromtheedge/images/2.JPG" alt="Art 2">
     </div>
     <div class="gallery-item">
-      <img src="images/3.JPG" alt="Art 3">
+      <img src="fromtheedge/images/3.JPG" alt="Art 3">
     </div>
     <!-- Add more gallery items here -->
   </div>
