--- a/fromtheedge.html
+++ b/fromtheedge.html
@@ -37,7 +37,24 @@
   </style>
 </head>
 <body>
-      
+       <div class="menu">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Gallery</a>
+        <ul class="dropdown">
+          <li><a href="fromtheedge.html">From The Edge</a></li>
+          <li><a href="rare-fiction.html">Rare Fiction</a></li>
+          <li><a href="symphony-of-the-mountains.html">Symphony of the Mountains</a></li>
+          <li><a href="jeff-lane.html">Jeff Lane</a></li>
+          <li><a href="asylum-suite.html">Asylum Suite</a></li>
+          <li><a href="hannah-unsalted.html">Hannah Unsalted</a></li>
+          <li><a href="jason-lloyd.html">Jason Lloyd</a></li>
+        </ul>
+      </li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
   <div class="gallery">
     <div class="gallery-item">
       <img src="fromtheedge/1.JPG" alt="Art 1">
