--- a/fromtheedge.html
+++ b/fromtheedge.html
@@ -87,7 +87,7 @@
 <body>
        <div class="menu">
     <ul>
-      <li><a href="fromtheedge.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#">Gallery</a>
         <ul class="dropdown">
           <li><a href="fromtheedge.html">From The Edge</a></li>
