--- a/fromtheedge.html
+++ b/fromtheedge.html
@@ -112,7 +112,8 @@
     </div>
     <div class="gallery-item">
       <img src="fromtheedge/3.JPG" alt="Art 3">
-      <div class="gallery-item">
+    </div>
+    <div class="gallery-item">
       <img src="fromtheedge/4.JPG" alt="Art 1">
     </div>
     <div class="gallery-item">
