--- a/fromtheedge.html
+++ b/fromtheedge.html
@@ -122,6 +122,24 @@
     <div class="gallery-item">
       <img src="fromtheedge/6.JPG" alt="Art 3">
     </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/1.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/2.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/3.JPG" alt="Art 3">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/4.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/5.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/6.JPG" alt="Art 3">
+    </div> 
     <!-- Add more gallery items here -->
   </div>
 </body>
