--- a/fromtheedge.html
+++ b/fromtheedge.html
@@ -10,7 +10,7 @@
       width: 100%;
       background: #333;
       color: white;
-      padding: 80px;
+      padding: 0px;
       text-align: center;
       z-index: 1000;
     }
@@ -135,10 +135,46 @@
       <img src="fromtheedge/10.JPG" alt="Art 1">
     </div>
     <div class="gallery-item">
-      <img src="fromtheedge/5.JPG" alt="Art 2">
+      <img src="fromtheedge/11.JPG" alt="Art 2">
     </div>
     <div class="gallery-item">
-      <img src="fromtheedge/6.JPG" alt="Art 3">
+      <img src="fromtheedge/12.JPG" alt="Art 3">
+    </div> 
+    <div class="gallery-item">
+      <img src="fromtheedge/13.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/14.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/15.JPG" alt="Art 3">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/16.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/17.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/18.JPG" alt="Art 3">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/19.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/20.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/21.JPG" alt="Art 3">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/22.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/23.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/24.JPG" alt="Art 3">
     </div> 
     <!-- Add more gallery items here -->
   </div>
