--- a/fromtheedge.html
+++ b/fromtheedge.html
@@ -163,18 +163,78 @@
     </div>
     <div class="gallery-item">
       <img src="fromtheedge/20.JPG" alt="Art 2">
+      </div
+    <div class="gallery-item">
+      <img src="fromtheedge/21.JPG" alt="Art 1">
     </div>
     <div class="gallery-item">
-      <img src="fromtheedge/21.JPG" alt="Art 3">
+      <img src="fromtheedge/22.JPG" alt="Art 2">
     </div>
     <div class="gallery-item">
-      <img src="fromtheedge/22.JPG" alt="Art 1">
+      <img src="fromtheedge/23.JPG" alt="Art 3">
     </div>
     <div class="gallery-item">
-      <img src="fromtheedge/23.JPG" alt="Art 2">
+      <img src="fromtheedge/24.JPG" alt="Art 1">
     </div>
     <div class="gallery-item">
-      <img src="fromtheedge/24.JPG" alt="Art 3">
+      <img src="fromtheedge/25.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/26.JPG" alt="Art 3">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/27.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/28.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/29.JPG" alt="Art 3">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/30.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/31.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/32.JPG" alt="Art 3">
+    </div> 
+    <div class="gallery-item">
+      <img src="fromtheedge/33.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/34.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/35.JPG" alt="Art 3">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/36.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/37.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/38.JPG" alt="Art 3">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/39.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/40.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/41.JPG" alt="Art 3">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/42.JPG" alt="Art 1">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/43.JPG" alt="Art 2">
+    </div>
+    <div class="gallery-item">
+      <img src="fromtheedge/44.JPG" alt="Art 3">
     </div> 
     <!-- Add more gallery items here -->
   </div>
