--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
       <li><a href="#">Gallery</a>
         <ul class="dropdown">
           <li><a href="fromtheedge.html">From The Edge</a></li>
+              <ul>
+                <li></li>a  href="fromtheedgekeyboard.html">Keyboard</a></li>
+              </lu>
           <li><a href="rare-fiction.html">Rare Fiction</a></li>
           <li><a href="symphony-of-the-mountains.html">Symphony of the Mountains</a></li>
           <li><a href="jeff-lane.html">Jeff Lane</a></li>
