--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Responsive Drop-down Menu Bar</title>
+    <title>Kevin Morrell Photography</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="" />
     <link rel="stylesheet" href="km.css">
   </head>
   <body>
       <nav>
-        <div class="logo">Code4education</div>
+        <div class="logo">KM Photography</div>
         <label for="btn" class="icon">
           <span class="fas fa-bars"></span>
         </label>
