--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
@@ -19,15 +18,15 @@
         </nav>
     </header>
     <section id="home">
-        <h1>Welcome to My Photography Portfolio</h1>
-        <p>Your welcome message here</p>
-        <!-- Add a banner image or slideshow here -->
+        <div class="heading-container">
+            <h1>Welcome to My Photography Portfolio</h1>
+            <p>Your welcome message here</p>
+        </div>
     </section>
     <section id="gallery">
         <h2>Gallery</h2>
-        <!-- Gallery of images -->
         <div class="gallery-container">
-            <!-- Individual images here -->
+            <!-- Gallery images go here -->
         </div>
     </section>
     <section id="about">
@@ -50,5 +49,6 @@
             <button type="submit">Send</button>
         </form>
     </section>
+    <script src="scripts.js"></script>
 </body>
 </html>
