--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="km.css">
 </head>
 <body>
     <header>
@@ -51,4 +51,9 @@
     </section>
     <script src="scripts.js"></script>
 </body>
+    document.addEventListener('DOMContentLoaded', function() {
+    const heading = document.querySelector('.heading-container');
+    heading.classList.add('visible');
+});
+
 </html>
