--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography Portfolio</title>
-    <link rel="stylesheet" href="km.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -49,11 +49,11 @@
             <button type="submit">Send</button>
         </form>
     </section>
-    <script src="scripts.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const heading = document.querySelector('.heading-container');
+            heading.classList.add('visible');
+        });
+    </script>
 </body>
-    document.addEventListener('DOMContentLoaded', function() {
-    const heading = document.querySelector('.heading-container');
-    heading.classList.add('visible');
-});
-
 </html>
