--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="gallery">
         <h2>Gallery</h2>
          <div class="gallery-container"> <!-- Replace `image1.jpg` with your actual image filenames -->
-        <img src="1.jpg" alt="Description 1" loading="lazy"> 
+        <img src="1.JPG" alt="Description 1" loading="lazy"> 
         <img src="2.jpg" alt="Description 2" loading="lazy">
         <img src="3.jpg" alt="Description 3" loading="lazy"> <!-- Add up to 20 images --> 
                     <!-- Gallery images go here -->
