--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography Portfolio</title>
-    <link rel="stylesheet" href="km.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -25,11 +25,27 @@
     </section>
     <section id="gallery">
         <h2>Gallery</h2>
-         <div class="gallery-container"> <!-- Replace `image1.jpg` with your actual image filenames -->
-        <img src="1.JPG" alt="Description 1" loading="lazy"> 
-        <img src="2.JPG" alt="Description 2" loading="lazy">
-        <img src="3.jpg" alt="Description 3" loading="lazy"> <!-- Add up to 20 images --> 
-                    <!-- Gallery images go here -->
+        <div class="gallery-container">
+            <img src="1.JPG" alt="Description 1" loading="lazy">
+            <img src="2.JPG" alt="Description 2" loading="lazy">
+            <img src="image3.jpg" alt="Description 3" loading="lazy">
+            <img src="image4.jpg" alt="Description 4" loading="lazy">
+            <img src="image5.jpg" alt="Description 5" loading="lazy">
+            <img src="image6.jpg" alt="Description 6" loading="lazy">
+            <img src="image7.jpg" alt="Description 7" loading="lazy">
+            <img src="image8.jpg" alt="Description 8" loading="lazy">
+            <img src="image9.jpg" alt="Description 9" loading="lazy">
+            <img src="image10.jpg" alt="Description 10" loading="lazy">
+            <img src="image11.jpg" alt="Description 11" loading="lazy">
+            <img src="image12.jpg" alt="Description 12" loading="lazy">
+            <img src="image13.jpg" alt="Description 13" loading="lazy">
+            <img src="image14.jpg" alt="Description 14" loading="lazy">
+            <img src="image15.jpg" alt="Description 15" loading="lazy">
+            <img src="image16.jpg" alt="Description 16" loading="lazy">
+            <img src="image17.jpg" alt="Description 17" loading="lazy">
+            <img src="image18.jpg" alt="Description 18" loading="lazy">
+            <img src="image19.jpg" alt="Description 19" loading="lazy">
+            <img src="image20.jpg" alt="Description 20" loading="lazy">
         </div>
     </section>
     <section id="about">
