--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="home">
         <div class="heading-container">
             <h1>Welcome to My Photography Portfolio</h1>
-            <p>Your welcome message here</p>
+            <p>This is a collection of band photos taken in and around Tri-Cities, Tennessee from September 2024 to present.</p>
         </div>
     </section>
     <section id="gallery">
