--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
     <section id="about">
         <h2>About Me</h2>
-        <p>I took up photography around 2020 taking pictures of Sullivan Heights Middle School Concert band and West Ridge High School concert and marching band. In 2024 I decided to branch out and beging to phograph live bands in Kingsport and Johnson City. This website is housing some of the photos taken within the dates mentioned. I have enjoyed getting to meet the local artists and business owners. My current persuit is on of promoting local businesses, artists, and venues and push the boundries of my newly found interest in photography.</p>
+        <p>Taking up photography in and around 2020, I started taking photos of Sullivan Heights Middle School and West Ridge High School concert and marching bands. In 2024 I decided to branch out and begin to photograph live bands in Kingsport and Johnson City. This website is housing some of the photos taken within the dates mentioned. I have enjoyed getting to meet the local artists and business owners. My current persuit is on of promoting local businesses, artists, and venues and push the boundries of my newly found interest in photography.</p>
     </section>
     <section id="services">
         <h2>Services</h2>
