--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <nav>
             <ul>
+                <li><a href="#home">Home</a></li> <!-- Added Home link here -->
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
@@ -28,24 +29,14 @@
         <div class="gallery-container">
             <img src="1.JPG" alt="Description 1" loading="lazy">
             <img src="2.JPG" alt="Description 2" loading="lazy">
-            <img src="image3.jpg" alt="Description 3" loading="lazy">
-            <img src="image4.jpg" alt="Description 4" loading="lazy">
-            <img src="image5.jpg" alt="Description 5" loading="lazy">
-            <img src="image6.jpg" alt="Description 6" loading="lazy">
-            <img src="image7.jpg" alt="Description 7" loading="lazy">
-            <img src="image8.jpg" alt="Description 8" loading="lazy">
-            <img src="image9.jpg" alt="Description 9" loading="lazy">
-            <img src="image10.jpg" alt="Description 10" loading="lazy">
-            <img src="image11.jpg" alt="Description 11" loading="lazy">
-            <img src="image12.jpg" alt="Description 12" loading="lazy">
-            <img src="image13.jpg" alt="Description 13" loading="lazy">
-            <img src="image14.jpg" alt="Description 14" loading="lazy">
-            <img src="image15.jpg" alt="Description 15" loading="lazy">
-            <img src="image16.jpg" alt="Description 16" loading="lazy">
-            <img src="image17.jpg" alt="Description 17" loading="lazy">
-            <img src="image18.jpg" alt="Description 18" loading="lazy">
-            <img src="image19.jpg" alt="Description 19" loading="lazy">
-            <img src="image20.jpg" alt="Description 20" loading="lazy">
+            <img src="3.JPG" alt="Description 3" loading="lazy">
+            <img src="4.JPG" alt="Description 4" loading="lazy">
+            <img src="5.JPG" alt="Description 5" loading="lazy">
+            <img src="6.JPG" alt="Description 6" loading="lazy">
+            <img src="7.JPG" alt="Description 7" loading="lazy">
+            <img src="8.JPG" alt="Description 8" loading="lazy">
+            <img src="9.JPG" alt="Description 9" loading="lazy">
+            <img src="10.JPG" alt="Description 10" loading="lazy">
         </div>
     </section>
     <section id="about">
