--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <section id="home">
         <div class="heading-container">
-            <h1>Welcome to My Photography Portfolio</h1>
+            <h1>Kevin Morrell Photography</h1>
             <p>This is a collection of band photos taken in and around Tri-Cities, Tennessee from September 2024 to present.</p>
         </div>
     </section>
